--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@prisma/adapter-better-sqlite3": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "next": "15.5.9",
+    "pg": "^8.17.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -30,7 +32,7 @@
     "isomorphic-dompurify": "^2.35.0",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "prisma": "^7.2.0",
+    "prisma": "^7.3.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
